--- a/UnivMedicalRecord/UnivMedicalRecord.csproj
+++ b/UnivMedicalRecord/UnivMedicalRecord.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="bootstrap" Version="5.2.3" />
+      <PackageReference Include="Microsoft.AspNet.WebHelpers" Version="3.2.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
