Fixed adding lab result and record function

--- a/UnivMedicalRecord/UnivMedicalRecord.csproj
+++ b/UnivMedicalRecord/UnivMedicalRecord.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="wwwroot\images\" />
+      <_ContentIncludedByDefault Remove="Pages\GraphTest\Graph.cshtml" />
     </ItemGroup>
 
 </Project>
