--- a/UnivMedicalRecord/UnivMedicalRecord.csproj
+++ b/UnivMedicalRecord/UnivMedicalRecord.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="bootstrap" Version="5.2.3" />
+      <PackageReference Include="Chart.Mvc" Version="1.0.0.2" />
+      <PackageReference Include="ChartJS.Helpers.MVC" Version="3.3.1" />
       <PackageReference Include="Microsoft.AspNet.WebHelpers" Version="3.2.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
         <PrivateAssets>all</PrivateAssets>
@@ -22,6 +24,8 @@
 
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Pages\GraphTest\Graph.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\ChartTest\ChartJS.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\Chart\ChartTest.cshtml" />
     </ItemGroup>
 
 </Project>
